# hbbseq

./: .gitignore  LICENSE  README.md  app.py  cli.py  conftest.py  generate_variants.py  plots.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
hbb_pipeline/: alignment.py  coordinates.py  heterozygosity.py  known_variants.py  models.py  parsing.py  pipeline.py  qc.py  reference.py  reporting.py  variants.py
reference/: HBB_reference.fasta
tests/: test_alignment.py  test_coordinates.py  test_heterozygosity.py  test_parsing.py  test_qc.py  test_reference.py  test_reporting.py  test_variants.py
